# read-cli

./: README.md  pyproject.toml
agent/: TOOLS.md
src/read/: __init__.py  cli.py
src/read/commands/: add.py  ls.py  stats.py  tags.py
src/read/core/: client.py  models.py
src/read/db/: schema.py  utils.py
